# FFIPackage

./: README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/trial_ffi/: TrialFfiPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/trial_ffi_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: trial_ffi.podspec
ios/Classes/: SwiftTrialFfiPlugin.swift  TrialFfiPlugin.h  TrialFfiPlugin.m  trial_ffi.cpp
lib/: decrypt_ffi.dart  encrypt_ffi.dart  test_online_repo.dart  trial_ffi.dart  trial_ffi_method_channel.dart  trial_ffi_platform_interface.dart
test/: trial_ffi_method_channel_test.dart  trial_ffi_test.dart
